--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
-version: 3.12
+version: '3.7'
 services:
   postgres:
     image: postgres:12-alpine
     ports:
-    - '5432:5432'
+      - '5432:5432'
     volumes:
-    - ./var/lib/postgresql/data
-   entrypoint:
-     - POSTGRES_DB=app
-       - POSTGRES_USER=app
-       - POSTGRES_PASSWORD=qwerty123
+      - ./data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=9mREsvXDs9Gk89Ef
